# metalshader

./: .gitignore  Cargo.toml  MACOS-STATUS.md  MACOS-WINDOWED.md  MEMORY.md  MILESTONES.md  README.md  RECOMMENDATION.md  REDOX-ADAPTATION.md  SESSION-SUMMARY.md  build-redox.sh  build-rust.sh  build.sh  check-vulkan.sh  install-app.sh  install-on-guest.sh  install-rust-to-guest.sh  install-to-guest.sh  notes.md  shaders  test-cube-fixed.sh  test-cube-shader.sh  test-cube-visibility.sh
.cargo/: config.toml
notes/: advanced-mandelbrot-shaders.md  c-to-rust-porting.md  fixes.md  implementation-summary.md  macos-setup.md  macos-windowed.md  redox-api-mapping.md  redox-testing-guide.md  refactor-plan.md
old/: RUST-STATUS.md  metalshader.c
src/: display.rs  input.rs  macos_resolution.rs  main.rs  main_macos.rs  platform.rs  renderer.rs  renderer_swapchain.rs  shader.rs  shader_compiler.rs
src/platform/: linux.rs  macos.rs  redox.rs
