[package]
name = "metalshader"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = "0.38"
libc = "0.2"

                                                                                                     
# .cargo/config.toml
# Offline mode configuration                                                                                       
# [net]                                                                                                              
# offline = true    

[target.'cfg(target_os = "linux")'.dependencies]
drm = "0.14"  # new - modern DRM API with DumbBuffer support
input-linux = "0.7"  # Latest available on crates.io

# Note: Redox dependencies are not available on crates.io
# They are only available when building within the Redox ecosystem
# [target.'cfg(target_os = "redox")'.dependencies]
# orbclient = "0.3.47"  # For Event types and input handling
# syscall = "0.4"       # For Redox syscalls (fcntl, etc.)

[target.'cfg(target_os = "macos")'.dependencies]
winit = "0.30"        # Cross-platform windowing and input
raw-window-handle = "0.6"  # For Vulkan surface creation
ash-window = "0.13"   # Helper for creating Vulkan surfaces from windows

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
